# rinha-backend-rust-2024q1

./: Cargo.toml  Dockerfile  docker-compose.yaml
config/: init.sql  nginx.conf
src/: main.rs  persistence.rs
